--- a/k9copy.desktop
+++ b/k9copy.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
-Name=k9copy
-Exec=k9copy -caption "%c" %i %u
+Name=K9copy
+Exec=k9copy
 Comment=DVD9 to DVD5 backup tool
 Comment[fr]=Backup de DVD9 en DVD5
 Comment[tr]=DVD9 DVD5 yedekleme aracı
