--- a/k9copy_open.desktop
+++ b/k9copy_open.desktop
@@ -1,5 +1,5 @@
 [Desktop Action open]
-Exec=k9copy --input %f 
+Exec=K9copy --input %f 
 Icon=k9copy
 Name=Copy with k9copy
 Name[fr]=Copier avec k9copy
